k8s/overlays/dev/patches/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dq-dev
  labels:
    app.kubernetes.io/part-of: dq-made-easy
    app.kubernetes.io/environment: dev
    platform.jaccloud.nl/managed-by: argocd
    platform.jaccloud.nl/tenant: dq
    platform.jaccloud.nl/environment: dev
