k8s/overlays/dev/patches/ingress-dq-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-api
spec:
  tls:
    - hosts:
        - dq-api.dev.jac.dot
      secretName: dq-api-tls
  rules:
    - host: dq-api.dev.jac.dot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dq-api
                port:
                  number: 4010
