k8s/overlays/dev/patches/ingress-dq-engine.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-engine
spec:
  tls:
    - hosts:
        - dq-engine.dev.jac.dot
      secretName: dq-engine.dev.jac.dot-tls
  rules:
    - host: dq-engine.dev.jac.dot
