k8s/overlays/dev/patches/ingress-dq-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ui
spec:
  tls:
    - hosts:
        - dq-ui.dev.jac.dot
      secretName: dq-ui-tls
  rules:
    - host: dq-ui.dev.jac.dot
